<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications_black_24dp"

        android:title="@string/notifications" />
    <item
        android:id="@+id/navigation_searchDonor"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search_donor" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/history" />

    <item
        android:id="@+id/navigation_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_person_24"/>

</menu>